♻️ Remove renderInlineTemplate and friends
Replace with renderEmbeddedTemplate. This will make the next changes
easier.